package funcoes;

public interface AparelhoMusical {

    void ligar(String numero);
    void atender();
    void iniciarCorreioVoz();
    
}
